Fixed a display issue in the Herta page, where the Kuru animationss would not "overflow-x: hidden" css property from their parent container.

--- a/src/pages/HertaKuru/HertaKuru.css
+++ b/src/pages/HertaKuru/HertaKuru.css
@@ -10,7 +10,7 @@
 .herta-img {
     position: absolute;
 
-    top: 55.5px;
+    bottom: 40px;
 
     min-width: 400px;
     min-height: 400px;
